# microservices

./: README.md  docker-compose.yml
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/com/hidrogreen/api_gateway/: ApiGatewayApplication.java
api-gateway/src/main/resources/: application.yml
api-gateway/src/test/java/com/hidrogreen/api_gateway/: ApiGatewayApplicationTests.java
detection-service/: README.md  main.py  pyproject.toml
discovery-service/: Dockerfile  pom.xml
discovery-service/src/main/java/com/hidrogreen/discovery_service/: DiscoveryServiceApplication.java
discovery-service/src/main/resources/: application.properties
discovery-service/src/test/java/com/hidrogreen/discovery_service/: DiscoveryServiceApplicationTests.java
notification-service/: Dockerfile  pom.xml
notification-service/src/main/java/com/ayni/notification_service/: NotificationServiceApplication.java
notification-service/src/main/resources/: application.properties
report-service/: Dockerfile  pom.xml
report-service/src/main/java/com/hidrogreen/report_service/: ReportServiceApplication.java
report-service/src/main/resources/: application.properties
report-service/src/test/java/com/hidrogreen/report_service/: ReportServiceApplicationTests.java
treatment-activity-service/: Dockerfile  pom.xml
treatment-activity-service/src/main/java/com/hidrogreen/treatment_activity_service/: TreatmentActivityServiceApplication.java
user-service/: Dockerfile  pom.xml
user-service/src/main/resources/: application.properties
(+128 files in other folders)
